<resources>
    <string name="app_name">AndroidRestCRUDSampleAPP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Users list</string>
    <string name="second_fragment_label">Single user</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="user_id">User ID</string>
    <string name="username">User name</string>
    <string name="birthday">Birthday</string>
    <string name="delete">Delete</string>
    <string name="user_deleted">The user has been succesfully deleted.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_user_fragment_label">Create user</string>
    <string name="edit">Edit</string>
    <string name="edit_user_fragment_label">Edit User</string>
    <string name="user_name">Username</string>
    <string name="user_edited">The user has been succesfully edited.</string>
    <string name="create">Create User</string>
    <string name="please_add_username">Please fill the name</string>
    <string name="user_created">The user has been succesfully created.</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_user_message">"Are you sure you want to delete this user? "</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>